--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
 		"php": ">=8.1",
 		"ext-openssl": "*",
 		"firebase/php-jwt": "^6.3",
-		"symfony/dependency-injection": "^6.0",
-		"symfony/console": "^6.0",
-		"symfony/filesystem": "^6.0",
-		"symfony/config": "^6.0"
+		"symfony/dependency-injection": "^6.0|^7.0",
+		"symfony/console": "^6.0|^7.0",
+		"symfony/filesystem": "^6.0|^7.0",
+		"symfony/config": "^6.0|^7.0"
 	},
 	"autoload": {
 		"psr-4": {
