--- a/composer.json
+++ b/composer.json
@@ -4,23 +4,46 @@
 	"keywords": ["JWT", "symfony"],
 	"type": "symfony-bundle",
 	"license": "MIT",
+	"minimum-stability": "dev",
+	"prefer-stable": true,
 	"authors": [
 		{
 			"name": "Petr Gala"
 		}
 	],
 	"require": {
-		"php": ">=8.1",
+		"php": ">=8.3",
 		"ext-openssl": "*",
 		"firebase/php-jwt": "^6.3",
-		"symfony/dependency-injection": "^6.0|^7.0",
-		"symfony/console": "^6.0|^7.0",
-		"symfony/filesystem": "^6.0|^7.0",
-		"symfony/config": "^6.0|^7.0"
+		"symfony/dependency-injection": "^7.0",
+		"symfony/console": "^7.0",
+		"symfony/filesystem": "^7.0",
+		"symfony/config": "^7.0"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "^10",
+		"symfony/framework-bundle": "^7.0",
+		"friendsofphp/php-cs-fixer": "^3.75",
+		"phpstan/phpstan": "^2.1"
 	},
 	"autoload": {
 		"psr-4": {
 			"Pierotto\\TokenizerBundle\\": "src/"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"Pierotto\\TokenizerBundle\\Tests\\": "tests/"
+		}
+	},
+	"scripts": {
+		"test": "vendor/bin/phpunit",
+		"phpstan": "vendor/bin/phpstan analyse -c phpstan.dist.neon",
+		"cs-fix": "vendor/bin/php-cs-fixer fix"
+	},
+	"extra": {
+		"symfony": {
+			"bundle": "Pierotto\\TokenizerBundle\\Infrastructure\\Symfony\\TokenizerBundle"
 		}
 	}
 }
